--- a/gsgaPoker/index.html
+++ b/gsgaPoker/index.html
@@ -8,6 +8,10 @@
         <script src="Scripts/jquery.signalR-2.2.0.min.js"></script>
         <script src="signalr/hubs"></script>
         <script src="Scripts/MainController.js"></script>
+
+        <!-- CDN -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.3/components/button.min.css" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.3/components/input.min.css" />
     </head>
     <body >
         <header>
@@ -16,8 +20,10 @@
         </header>
 
         <section id="form" class="center">
-            <input class=marginIt id="name" type=text placeholder="Your name"><br>
-            <button id="login"><span>Sign in</span></button>
+            <div class="ui action input">
+                <input class=marginIt id="name" type=text placeholder="Your name"><br>
+                <button id="login" class="ui button"><span>Sign in</span></button>
+            </div>
         </section>
 
         <section id="sectionCentral">
@@ -25,8 +31,8 @@
             </div>
 
             <div id="buttonInside" class="center">
-                <button id="reset"> Reset </button>
-                <button id="show"> Show Votes</button>
+                <button class="ui blue basic button" id="reset">Reset</button>
+                <button class="ui blue basic button" id="show">Show Votes</button>
             </div>
         </section>
 
