--- a/gsgaPoker/index.html
+++ b/gsgaPoker/index.html
@@ -8,6 +8,7 @@
         <script src="Scripts/jquery.signalR-2.2.0.min.js"></script>
         <script src="signalr/hubs"></script>
         <script src="Scripts/MainController.js"></script>
+        <link rel="icon" type="image/png" href="Images/icon.png">
 
         <!-- CDN -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.3/components/button.min.css" />
