Add my name in project :)

--- a/gsgaPoker/index.html
+++ b/gsgaPoker/index.html
@@ -62,7 +62,7 @@
         </section>
 
         <footer class="font shadow center">
-            Developed by Vinicius Mariano &copy;
+            Developed by Vinicius Mariano and Douglas da Costa &copy;
         </footer>
     </body>
 </html>
